--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "html-webpack-plugin": "^5.6.0",
     "interpolate-html-plugin": "^4.0.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
